use UriUtils.encodePath() instead of UriComponentsBuilder